Plantation fields for 1.20