@@ -1,45 +1,48 @@
 package com.minecolonies.coremod.colony.buildings.workerbuildings;
 
-import com.google.common.collect.ImmutableMap;
+import com.ldtteam.blockui.views.BOWindow;
 import com.minecolonies.api.colony.IColony;
-import com.minecolonies.api.colony.buildings.modules.settings.ISettingKey;
+import com.minecolonies.api.colony.fields.IField;
+import com.minecolonies.api.colony.fields.plantation.IPlantationModule;
+import com.minecolonies.api.colony.fields.registry.FieldRegistries;
 import com.minecolonies.api.colony.jobs.registry.JobEntry;
 import com.minecolonies.api.crafting.GenericRecipe;
 import com.minecolonies.api.crafting.IGenericRecipe;
+import com.minecolonies.api.tileentities.AbstractTileEntityColonyBuilding;
 import com.minecolonies.api.util.CraftingUtils;
 import com.minecolonies.api.util.ItemStackUtils;
-import com.minecolonies.api.util.Log;
 import com.minecolonies.api.util.OptionalPredicate;
 import com.minecolonies.api.util.constant.ToolType;
+import com.minecolonies.coremod.client.gui.modules.PlantationFieldsModuleWindow;
 import com.minecolonies.coremod.colony.buildings.AbstractBuilding;
 import com.minecolonies.coremod.colony.buildings.modules.AbstractCraftingBuildingModule;
-import com.minecolonies.coremod.colony.buildings.modules.settings.PlantationSetting;
-import com.minecolonies.coremod.colony.buildings.modules.settings.SettingKey;
+import com.minecolonies.coremod.colony.buildings.modules.FieldsModule;
+import com.minecolonies.coremod.colony.buildings.moduleviews.FieldsModuleView;
+import com.minecolonies.coremod.colony.fields.PlantationField;
 import net.minecraft.core.BlockPos;
 import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.ListTag;
-import net.minecraft.nbt.NbtUtils;
-import net.minecraft.nbt.Tag;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.network.FriendlyByteBuf;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.util.Tuple;
-import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.Items;
 import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.Blocks;
-
+import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.api.distmarker.OnlyIn;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
-import java.util.function.BiPredicate;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
-import static com.minecolonies.api.util.constant.BuildingConstants.CONST_DEFAULT_MAX_BUILDING_LEVEL;
+import static com.minecolonies.api.research.util.ResearchConstants.PLANTATION_LARGE;
 import static com.minecolonies.api.util.constant.NbtTagConstants.TAG_PLANTGROUND;
-import static com.minecolonies.api.util.constant.NbtTagConstants.TAG_POS;
 import static com.minecolonies.api.util.constant.TagConstants.CRAFTING_PLANTATION;
 import static com.minecolonies.api.util.constant.ToolLevelConstants.TOOL_LEVEL_WOOD_OR_GOLD;
+import static com.minecolonies.api.util.constant.translation.GuiTranslationConstants.FIELD_LIST_PLANTATION_RESEARCH_REQUIRED;
+import static com.minecolonies.api.util.constant.translation.GuiTranslationConstants.FIELD_LIST_WARN_EXCEEDS_PLANT_COUNT;
 
 /**
  * Class of the plantation building. Worker will grow sugarcane/bamboo/cactus + craft paper and books.
@@ -47,34 +50,17 @@ import static com.minecolonies.api.util.constant.ToolLevelConstants.TOOL_LEVEL_W
 public class BuildingPlantation extends AbstractBuilding
 {
     /**
-     * Settings key for the building mode.
-     */
-    public static final ISettingKey<PlantationSetting> MODE =
-      new SettingKey<>(PlantationSetting.class, new ResourceLocation(com.minecolonies.api.util.constant.Constants.MOD_ID, "mode"));
-
-    /**
-     * The combinations of item/block/tags.
-     */
-    public static final Map<Item, PlantationItem> COMBINATIONS = ImmutableMap.<Item, PlantationItem>builder()
-      .put(Items.SUGAR_CANE, new PlantationItem(Items.SUGAR_CANE, Blocks.SUGAR_CANE, "sugar", 3))
-      .put(Items.CACTUS, new PlantationItem(Items.CACTUS, Blocks.CACTUS, "cactus", 3))
-      .put(Items.BAMBOO, new PlantationItem(Items.BAMBOO, Blocks.BAMBOO, "bamboo", 3))
-      .build();
-
-    /**
      * Description string of the building.
      */
     private static final String PLANTATION = "plantation";
 
     /**
-     * List of sand blocks to grow onto.
+     * TODO: future
+     * Legacy code, can be removed when plantations will no longer have to support fields
+     * directly from the hut building.
+     * Whether field migration from the old system to the new system should occur.
      */
-    private final List<BlockPos> sand = new ArrayList<>();
-
-    /**
-     * Cached list of soil positions
-     */
-    private List<PlantationSoilPosition> soilPositions = null;
+    private boolean triggerFieldMigration = false;
 
     /**
      * Instantiates a new plantation building.
@@ -86,6 +72,144 @@ public class BuildingPlantation extends AbstractBuilding
     {
         super(c, l);
         keepX.put(itemStack -> ItemStackUtils.hasToolLevel(itemStack, ToolType.AXE, TOOL_LEVEL_WOOD_OR_GOLD, getMaxToolLevel()), new Tuple<>(1, true));
+        keepX.put(itemStack -> ItemStackUtils.hasToolLevel(itemStack, ToolType.SHEARS, TOOL_LEVEL_WOOD_OR_GOLD, getMaxToolLevel()), new Tuple<>(1, true));
+    }
+
+    @Override
+    public void onPlacement()
+    {
+        super.onPlacement();
+        updateFields();
+    }
+
+    private void updateFields()
+    {
+        updateField(FieldRegistries.plantationSugarCaneField.get());
+        updateField(FieldRegistries.plantationCactusField.get());
+        updateField(FieldRegistries.plantationBambooField.get());
+    }
+
+    /**
+     * TODO: future
+     * Legacy code, can be removed when plantations will no longer have to support fields
+     * directly from the hut building.
+     */
+    private void updateField(FieldRegistries.FieldEntry type)
+    {
+        final PlantationField plantationField = PlantationField.create(type, getPosition());
+        final List<BlockPos> workingPositions =
+          plantationField.getModule().getValidWorkingPositions(colony.getWorld(), getLocationsFromTag(plantationField.getModule().getWorkTag()));
+        if (workingPositions.isEmpty())
+        {
+            colony.getBuildingManager().removeField(field -> field.equals(plantationField));
+            return;
+        }
+
+        if (colony.getBuildingManager().addField(plantationField))
+        {
+            plantationField.setWorkingPositions(workingPositions);
+        }
+        else
+        {
+            final Optional<IField> existingField = colony.getBuildingManager().getField(field -> field.equals(plantationField));
+            if (existingField.isPresent() && existingField.get() instanceof PlantationField existingPlantationField)
+            {
+                existingPlantationField.setWorkingPositions(workingPositions);
+            }
+        }
+    }
+
+    /**
+     * TODO: future
+     * Legacy code, can be removed when plantations will no longer have to support fields
+     * directly from the hut building.
+     * <p>
+     * This is used for initial migration to the new plantation field system.
+     * This will register the fields on colony load, only when the building still contains old NBT data.
+     */
+    @Override
+    public void deserializeNBT(final CompoundTag compound)
+    {
+        super.deserializeNBT(compound);
+        if (compound.contains(TAG_PLANTGROUND))
+        {
+            triggerFieldMigration = true;
+        }
+    }
+
+    @Override
+    public void onUpgradeComplete(final int newLevel)
+    {
+        super.onUpgradeComplete(newLevel);
+        updateFields();
+    }
+
+    @Override
+    public Map<Predicate<ItemStack>, Tuple<Integer, Boolean>> getRequiredItemsAndAmount()
+    {
+        final Map<Predicate<ItemStack>, Tuple<Integer, Boolean>> toKeep = super.getRequiredItemsAndAmount();
+        for (FieldsModule module : getModules(FieldsModule.class))
+        {
+            for (final IField field : module.getOwnedFields())
+            {
+                if (field instanceof PlantationField plantationField)
+                {
+                    final IPlantationModule plantationModule = plantationField.getFirstModuleOccurance(IPlantationModule.class);
+                    toKeep.put(stack -> ItemStack.isSameItem(new ItemStack(plantationModule.getItem()), stack), new Tuple<>(plantationModule.getPlantsToRequest(), true));
+                }
+            }
+        }
+        return toKeep;
+    }
+
+    /**
+     * Check if the assigned citizens are allowed to eat the following stack.
+     * Additionally, if the stack is even edible in the first place, then it also checks if the fields aren't producing these items.
+     * If this item is being produced here, the planter is not allowed to eat his own products in that case. (Although most items the planter produces won't be edible to begin with).
+     *
+     * @param stack the stack to test.
+     * @return true if so.
+     */
+    @Override
+    public boolean canEat(final ItemStack stack)
+    {
+        if (!super.canEat(stack))
+        {
+            return false;
+        }
+
+        for (FieldsModule module : getModules(FieldsModule.class))
+        {
+            for (final IField field : module.getOwnedFields())
+            {
+                if (field instanceof PlantationField plantationField)
+                {
+                    final IPlantationModule plantationModule = plantationField.getFirstModuleOccurance(IPlantationModule.class);
+                    if (ItemStackUtils.compareItemStacksIgnoreStackSize(new ItemStack(plantationModule.getItem()), stack))
+                    {
+                        return false;
+                    }
+                }
+            }
+        }
+
+        return true;
+    }
+
+    /**
+     * TODO: future
+     * Legacy code, can be removed when plantations will no longer have to support fields
+     * directly from the hut building.
+     */
+    @Override
+    public void setTileEntity(final AbstractTileEntityColonyBuilding te)
+    {
+        super.setTileEntity(te);
+        if (triggerFieldMigration)
+        {
+            updateFields();
+            triggerFieldMigration = false;
+        }
     }
 
     @NotNull
@@ -95,136 +219,211 @@ public class BuildingPlantation extends AbstractBuilding
         return PLANTATION;
     }
 
-    @Override
-    public int getMaxBuildingLevel()
+    /**
+     * Field module implementation for the plantation.
+     */
+    public static class PlantationFieldsModule extends FieldsModule
     {
-        return CONST_DEFAULT_MAX_BUILDING_LEVEL;
-    }
-
-    @Override
-    public void registerBlockPosition(@NotNull final Block block, @NotNull final BlockPos pos, @NotNull final Level world)
-    {
-        super.registerBlockPosition(block, pos, world);
-        if (block == Blocks.SAND)
+        @Override
+        public void serializeToView(final @NotNull FriendlyByteBuf buf)
         {
-            final Block down = world.getBlockState(pos.below()).getBlock();
-            if (down == Blocks.COBBLESTONE || down == Blocks.STONE_BRICKS)
+            super.serializeToView(buf);
+            buf.writeInt(getMaxConcurrentPlants());
+        }
+
+        /**
+         * Get the maximum allowed plants the plantation can work on simultaneously.
+         *
+         * @return the maximum amount of concurrent plants.
+         */
+        public int getMaxConcurrentPlants()
+        {
+            return (int) Math.ceil(building.getBuildingLevel() / 2D);
+        }
+
+        @Override
+        protected int getMaxFieldCount()
+        {
+            int allowedPlants = (int) Math.ceil(building.getBuildingLevel() / 2D);
+            return building.getColony().getResearchManager().getResearchEffects().getEffectStrength(PLANTATION_LARGE) > 0
+                     ? allowedPlants + 1
+                     : allowedPlants;
+        }
+
+        @Override
+        public Class<?> getExpectedFieldType()
+        {
+            return PlantationField.class;
+        }
+
+        @Override
+        public @NotNull List<IField> getFields()
+        {
+            return building.getColony().getBuildingManager().getFields(field -> field.hasModule(IPlantationModule.class));
+        }
+
+        @Override
+        public boolean canAssignFieldOverride(IField field)
+        {
+            return getCurrentPlantsPlusField(field) <= getMaxConcurrentPlants() && hasRequiredResearchForField(field);
+        }
+
+        @Override
+        protected int getFieldCheckTimeoutSeconds()
+        {
+            return 60;
+        }
+
+        /**
+         * Getter of the worked plants.
+         *
+         * @param extraField the extra field to calculate.
+         * @return the amount of worked plants.
+         */
+        private int getCurrentPlantsPlusField(final IField extraField)
+        {
+            final Set<IPlantationModule> plants = getOwnedFields().stream()
+                                                    .map(field -> field.getFirstModuleOccurance(IPlantationModule.class))
+                                                    .collect(Collectors.toSet());
+            plants.add(extraField.getFirstModuleOccurance(IPlantationModule.class));
+            return plants.size();
+        }
+
+        /**
+         * Checks if the passed field has the research required.
+         *
+         * @param field the field in question.
+         * @return true if the research is handled.
+         */
+        private boolean hasRequiredResearchForField(final IField field)
+        {
+            if (field instanceof PlantationField plantationField)
             {
-                sand.add(pos);
+                final IPlantationModule plantationModule = plantationField.getFirstModuleOccurance(IPlantationModule.class);
+                if (plantationModule.getRequiredResearchEffect() != null)
+                {
+                    return building.getColony().getResearchManager().getResearchEffects().getEffectStrength(plantationModule.getRequiredResearchEffect()) > 0;
+                }
+                return true;
             }
+            return false;
         }
-    }
-
-    @Override
-    public void deserializeNBT(final CompoundTag compound)
-    {
-        super.deserializeNBT(compound);
-        final ListTag sandPos = compound.getList(TAG_PLANTGROUND, Tag.TAG_COMPOUND);
-        for (int i = 0; i < sandPos.size(); ++i)
-        {
-            sand.add(NbtUtils.readBlockPos(sandPos.getCompound(i).getCompound(TAG_POS)));
-        }
-    }
-
-    @Override
-    public CompoundTag serializeNBT()
-    {
-        final CompoundTag compound = super.serializeNBT();
-        @NotNull final ListTag sandCompoundList = new ListTag();
-        for (@NotNull final BlockPos entry : sand)
-        {
-            @NotNull final CompoundTag sandCompound = new CompoundTag();
-            sandCompound.put(TAG_POS, NbtUtils.writeBlockPos(entry));
-            sandCompoundList.add(sandCompound);
-        }
-        compound.put(TAG_PLANTGROUND, sandCompoundList);
-        return compound;
-    }
-
-    @Override
-    public void onUpgradeComplete(final int newLevel)
-    {
-        super.onUpgradeComplete(newLevel);
-        soilPositions = null;
     }
 
     /**
-     * Get a list of all the available working positions.
-     *
-     * @return the list of positions.
+     * Field module view implementation for the plantation.
      */
-    public List<PlantationSoilPosition> getAllSoilPositions()
+    public static class PlantationFieldsModuleView extends FieldsModuleView
     {
-        if (soilPositions == null)
+        /**
+         * The maximum amount of concurrent plants the planter can work on.
+         */
+        private int maxConcurrentPlants = 0;
+
+        @Override
+        public void deserialize(final @NotNull FriendlyByteBuf buf)
         {
-            soilPositions = getSoilPositions((tag, item) -> true);
+            super.deserialize(buf);
+            maxConcurrentPlants = buf.readInt();
         }
 
-        return soilPositions;
-    }
-
-    /**
-     * Get a list of all the available working positions.
-     *
-     * @param filter a predicate to filter against, contains the tag of a building.
-     * @return the list of positions.
-     */
-    private List<PlantationSoilPosition> getSoilPositions(BiPredicate<String, Item> filter)
-    {
-        final List<PlantationSoilPosition> filtered = new ArrayList<>();
-        if (tileEntity != null && !tileEntity.getPositionedTags().isEmpty())
+        @Override
+        protected boolean canAssignFieldOverride(final IField field)
         {
-            Map<String, Item> availableTags = COMBINATIONS.entrySet().stream().collect(Collectors.toMap(k -> k.getValue().getTag(), Map.Entry::getKey));
+            return getCurrentPlantsPlusField(field) <= maxConcurrentPlants && hasRequiredResearchForField(field);
+        }
 
-            for (final Map.Entry<BlockPos, List<String>> entry : tileEntity.getPositionedTags().entrySet())
+        @Override
+        protected List<IField> getFieldsInColony()
+        {
+            return getColony().getFields(field -> field.hasModule(IPlantationModule.class));
+        }
+
+        @Override
+        public @Nullable MutableComponent getFieldWarningTooltip(final IField field)
+        {
+            MutableComponent result = super.getFieldWarningTooltip(field);
+            if (result != null)
             {
-                final Optional<String> foundTag = entry.getValue().stream().filter(availableTags::containsKey).findFirst();
-                if (!foundTag.isPresent())
-                {
-                    continue;
-                }
-
-                Item item = availableTags.get(foundTag.get());
-                if (filter.test(foundTag.get(), item))
-                {
-                    filtered.add(new PlantationSoilPosition(getPosition().offset(entry.getKey()), COMBINATIONS.get(item)));
-                }
+                return result;
             }
+
+            if (getCurrentPlantsPlusField(field) > maxConcurrentPlants)
+            {
+                return Component.translatable(FIELD_LIST_WARN_EXCEEDS_PLANT_COUNT);
+            }
+
+            if (!hasRequiredResearchForField(field))
+            {
+                return Component.translatable(FIELD_LIST_PLANTATION_RESEARCH_REQUIRED);
+            }
+            return null;
         }
 
-        return filtered;
-    }
-
-    /**
-     * Obtain the current list of available plants to use.
-     *
-     * @return a list of plants.
-     */
-    public List<Item> getAvailablePlants()
-    {
-        final String setting = getSetting(MODE).getValue();
-
-        List<Item> items = new ArrayList<>();
-        if (setting.contains(Items.SUGAR_CANE.getDescriptionId()))
+        /**
+         * Getter of the worked plants.
+         *
+         * @param extraField the extra field to calculate.
+         * @return the amount of worked plants.
+         */
+        private int getCurrentPlantsPlusField(final IField extraField)
         {
-            items.add(Items.SUGAR_CANE);
-        }
-        if (setting.contains(Items.CACTUS.getDescriptionId()))
-        {
-            items.add(Items.CACTUS);
-        }
-        if (setting.contains(Items.BAMBOO.getDescriptionId()))
-        {
-            items.add(Items.BAMBOO);
+            final Set<IPlantationModule> plants = getOwnedFields().stream()
+                                                    .map(field -> field.getFirstModuleOccurance(IPlantationModule.class))
+                                                    .collect(Collectors.toSet());
+            plants.add(extraField.getFirstModuleOccurance(IPlantationModule.class));
+            return plants.size();
         }
 
-        // Add sugar cane as the default plant cycle as a fallback in case nothing exists in the settings
-        if (items.isEmpty())
+        /**
+         * Checks if the passed field has the research required.
+         *
+         * @param field the field in question.
+         * @return true if the research is handled.
+         */
+        private boolean hasRequiredResearchForField(final IField field)
         {
-            items.add(Items.SUGAR_CANE);
-            Log.getLogger().warn("Plantation plant setting contains none of the preconfigured plants, please report this to the developers!");
+            if (field instanceof PlantationField plantationField)
+            {
+                final IPlantationModule plantationModule = plantationField.getFirstModuleOccurance(IPlantationModule.class);
+                if (plantationModule.getRequiredResearchEffect() != null)
+                {
+                    return getColony().getResearchManager().getResearchEffects().getEffectStrength(plantationModule.getRequiredResearchEffect()) > 0;
+                }
+                return true;
+            }
+            return false;
         }
-        return items;
+
+        /**
+         * Getter of the worked plants.
+         *
+         * @return the amount of worked plants.
+         */
+        public int getCurrentPlants()
+        {
+            return getOwnedFields().stream()
+                     .map(field -> field.getFirstModuleOccurance(IPlantationModule.class))
+                     .collect(Collectors.toSet())
+                     .size();
+        }
+
+        @Override
+        @OnlyIn(Dist.CLIENT)
+        public BOWindow getWindow()
+        {
+            return new PlantationFieldsModuleWindow(buildingView, this);
+        }
+
+        /**
+         * Get the maximum allowed plants the plantation can work on simultaneously.
+         *
+         * @return the maximum amount of concurrent plants.
+         */
+        public int getMaxConcurrentPlants()
+        {
+            return maxConcurrentPlants;
+        }
     }
 
     public static class CraftingModule extends AbstractCraftingBuildingModule.Crafting
@@ -237,13 +436,6 @@ public class BuildingPlantation extends AbstractBuilding
         public CraftingModule(final JobEntry jobEntry)
         {
             super(jobEntry);
-        }
-
-        @NotNull
-        @Override
-        public OptionalPredicate<ItemStack> getIngredientValidator()
-        {
-            return CraftingUtils.getIngredientValidatorBasedOnTags(CRAFTING_PLANTATION).combine(super.getIngredientValidator());
         }
 
         @Override
@@ -262,141 +454,33 @@ public class BuildingPlantation extends AbstractBuilding
         {
             final List<IGenericRecipe> recipes = new ArrayList<>(super.getAdditionalRecipesForDisplayPurposesOnly(world));
 
-            // indicate which plants we can grow
-            for (final Map.Entry<Item, PlantationItem> entry : COMBINATIONS.entrySet())
+            for (FieldRegistries.FieldEntry type : FieldRegistries.getFieldRegistry().getValues())
             {
-                recipes.add(new GenericRecipe(null,
-                        new ItemStack(entry.getKey(), entry.getValue().getMinimumLength() + 1),
-                        Collections.emptyList(),
-                        Collections.singletonList(Collections.singletonList(new ItemStack(entry.getKey()))),
-                        1, Blocks.AIR, null, ToolType.NONE, Collections.emptyList(), -1));
+                type.getFieldModuleProducers().stream()
+                  .map(m -> m.apply(null))
+                  .filter(IPlantationModule.class::isInstance)
+                  .map(m -> (IPlantationModule) m)
+                  .findFirst()
+                  .ifPresent(module -> recipes.add(new GenericRecipe(null,
+                    new ItemStack(module.getItem()),
+                    Collections.emptyList(),
+                    List.of(module.getRequiredItemsForOperation()),
+                    1,
+                    Blocks.AIR,
+                    null,
+                    module.getRequiredTool(),
+                    Collections.emptyList(),
+                    -1)));
             }
 
             return recipes;
         }
-    }
 
-    public static class PlantationSoilPosition
-    {
-        /**
-         * The position.
-         */
-        private final BlockPos position;
-
-        /**
-         * The item combination data.
-         */
-        private final PlantationItem combination;
-
-        /**
-         * Default constructor.
-         *
-         * @param position    the position.
-         * @param combination the item combination data.
-         */
-        private PlantationSoilPosition(final BlockPos position, final PlantationItem combination)
+        @NotNull
+        @Override
+        public OptionalPredicate<ItemStack> getIngredientValidator()
         {
-            this.position = position;
-            this.combination = combination;
-        }
-
-        /**
-         * Get the position.
-         *
-         * @return the position.
-         */
-        public BlockPos getPosition()
-        {
-            return position;
-        }
-
-        /**
-         * Get the plantation item.
-         *
-         * @return the plantation item.
-         */
-        public PlantationItem getCombination()
-        {
-            return combination;
-        }
-    }
-
-    public static class PlantationItem
-    {
-        /**
-         * The item of the combination.
-         */
-        private final Item item;
-
-        /**
-         * The block of the combination.
-         */
-        private final Block block;
-
-        /**
-         * The tag of the combination.
-         */
-        private final String tag;
-
-        /**
-         * The minimum length of this combination.
-         */
-        private final int minimumLength;
-
-        /**
-         * Default constructor.
-         *
-         * @param item          the item.
-         * @param block         the block.
-         * @param tag           the tag.
-         * @param minimumLength the minimum length.
-         */
-        private PlantationItem(Item item, Block block, String tag, int minimumLength)
-        {
-            this.item = item;
-            this.block = block;
-            this.tag = tag;
-            this.minimumLength = minimumLength;
-        }
-
-        /**
-         * Get the item of the combination.
-         *
-         * @return the item.
-         */
-        public Item getItem()
-        {
-            return item;
-        }
-
-        /**
-         * Get the block of the combination.
-         *
-         * @return the block.
-         */
-        public Block getBlock()
-        {
-            return block;
-        }
-
-        /**
-         * Get the tag of the combination.
-         *
-         * @return the tag.
-         */
-        public String getTag()
-        {
-            return tag;
-        }
-
-        /**
-         * Get the minimum length of the combination.
-         *
-         * @return the minimum length.
-         */
-        public int getMinimumLength()
-        {
-            return minimumLength;
+            return CraftingUtils.getIngredientValidatorBasedOnTags(CRAFTING_PLANTATION).combine(super.getIngredientValidator());
         }
     }
 }
